# backend/src/routes/user.ts
@@ -14,6 +14,7 @@ import {
 } from "../controllers/user.controller";
 import { isAuthenticated } from "../middlewares/auth.middleware";
 import { getUserNotifications, updateNotificationStatus } from "../controllers/notification.controller";
+import { generateMonthlyRecommendations, getUserRecommendations } from "../controllers/recommendation.controller";
 
 const userRouter = express.Router();
 
@@ -33,5 +34,9 @@ userRouter.put("/update-notification-status/:id", isAuthenticated, updateNotific
 userRouter.put("/update-profile", isAuthenticated, updateUserProfile);
 userRouter.put("/update-health-details", isAuthenticated, updateUserHealthDetails);
 userRouter.put("/update-customizations", isAuthenticated, updateUserCustomizations);
+
+// Generate recommendations for the next 30 days
+userRouter.post("/generate-recommendations/:userId", isAuthenticated, generateMonthlyRecommendations);
+userRouter.get("get-recommendations/:userId", isAuthenticated, getUserRecommendations);
 
 export default userRouter;
